# Data-Scientist-Applied-AI-ML-Case-Study

./: .gitignore  Data Scientist Applied AI ML - Case Study.docx  README.md  data_dictionary.md  eda.py  predictions.csv  pyproject.toml  risk_scorer.py  risk_scorer_base.ipynb  score.csv  train.csv
.github/workflows/: deploy-presentation.yml
presentation/: astro.config.mjs  package-lock.json  package.json
presentation/src/pages/: index.astro
